<?xml version="1.0" encoding="utf-8"?>
<!-- 툴바 오버플로 메뉴. 세부 항목은 설정 화면(SettingsActivity)으로 옮겼다. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
...
